|Raunak+Priyanshu| Gujarati translations added for record, dashboard, error page

--- a/locales/gu.json
+++ b/locales/gu.json
@@ -4,18 +4,18 @@
 	"hours": "કલાકો",
 	"minutes": "મિનિટો",
 	"seconds": "",
-	"Recording for 5 seconds": "",
-	"Recording for 4 seconds": "",
-	"Recording for 3 seconds": "",
-	"Recording for 2 seconds": "",
-	"Recording for 1 seconds": "",
-	"Playingback Audio": "",
-	"Playing": "",
-	"Test Mic": "",
-	"Test Speakers": "",
-	"Congratulations!!! You have completed this batch of sentences": "",
-	"social sharing text with rank": "",
-	"social sharing text without rank": "",
+	"Recording for 5 seconds": "5 સેકન્ડ્સ માટે રેકોર્ડિંગ",
+	"Recording for 4 seconds": "4 સેકન્ડ્સ માટે રેકોર્ડિંગ",
+	"Recording for 3 seconds": "3 સેકન્ડ્સ માટે રેકોર્ડિંગ",
+	"Recording for 2 seconds": "2 સેકન્ડ્સ માટે રેકોર્ડિંગ",
+	"Recording for 1 seconds": "1 સેકન્ડ્સ માટે રેકોર્ડિંગ",
+	"Playingback Audio": "ઓડિયો ફરી ચલાવી રહ્યાં છે",
+	"Playing": "ચાલુ છે",
+	"Test Mic": "માઇક્રોફોન ટેસ્ટ કરો",
+	"Test Speakers": "સ્પીકર્સ ટેસ્ટ કરો",
+	"Congratulations!!! You have completed this batch of sentences": "અભિનંદન!!! તમે તમારા અવાજની આખી બેચ જેટલો ફાળો આપ્યો છે!",
+	"social sharing text with rank": "મેં http://boloindia.nplt.in પર ભારત માટે ખુલ્લા ભાષા ભંડાર માટે ફાળો આપ્યો છે. તમે અને હું આપણો અવાજ આપીને કંઇક અનોખું કરી શકીએ છીએ જેનાથી મશીનોને આપણી ભાષા સમજવામાં મદદ મળે. અમારી %language ભાષા બોલો ઇન્ડિયા પર %rank રેન્ક પર છે. તમે ફાળો આપીને તમારી ભાષાને સશક્ત બનાવશો?",
+	"social sharing text without rank": "મેં http://boloindia.nplt.in પર ભારત માટે ખુલ્લા ભાષા ભંડાર માટે ફાળો આપ્યો છે. તમે અને હું આપણો અવાજ આપીને કંઇક અનોખું કરી શકીએ છીએ જેનાથી મશીનોને આપણી ભાષા સમજવામાં મદદ મળે. તમે ફાળો આપીને તમારી ભાષાને સશક્ત બનાવશો?",
 	"Language": "ગુજરાતી",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "અમારા વિશે",
@@ -63,5 +63,67 @@
 	"Select Your Preferred Language": "તમારી પસંદગીની ભાષા પસંદ કરો",
 	"Terms & Conditions": "નિયમો અને શરતો",
 	"Privacy Policy": "પ્રાઇવસી પોલિસી",
-	"Feedback": "Feedback"
+	"Feedback": "Feedback",
+	"Select a language": "એક ભાષા પસંદ કરો",
+	"All Languages": "તમામ ભાષાઓ",
+	"Data Last Updated": "છેલ્લે અપડેટ કરાયેલો ડેટા",
+	"We do not have any data for this language, would you like to contribute for it?": "આ ભાષા માટે અમારી પાસે કોઇ ડેટા નથી, તમે તેના માટે ફાળો આપવા માંગો છો?",
+	"Contribute Now": "હમણાં ફાળો આપો",
+	"hours validated": "માન્ય કરેલા કલાકો",
+	"Progress Chart": "પ્રગતિનો આલેખ",
+	"Monthly": "માસિક",
+	"Quarterly": "ત્રિમાસિક",
+	"Gender Distribution": "જાતિ વિતરણ",
+	"State Wise distribution": "રાજ્ય પ્રમાણે વિતરણ",
+	"Age Group Distribution": "વય જૂથ પ્રમાણે વિતરણ",
+	"Quick Tips": "ત્વરિત સૂચનાઓ",
+	"Please test your <b>Microphone</b>": "કૃપા કરીને તમારું <b>માઇક્રોફોન</b> ચકાસો",
+	"Please test your <b>Speakers</b>": "કૃપા કરીને તમારા <b>સ્પીકર્સ</b> ચકાસો",
+	"Ensure there is <b>no background noise</b>": "ખાતરી કરો કે પાછળથી કોઈ અવાજ ન આવતો હોય",
+	"Read once <b>before recording it</b>": "રેકોર્ડિંગ શરૂ કરતા પહેલાં તેને એકવાર વાંચી લો",
+	"Get started by clicking on <b>Record</b> button": "<b>રેકોર્ડ</b> બટન પર ક્લિક કરીને શરૂ કરો",
+	"Report": "રિપોર્ટ",
+	"Test your Microphone and Speakers": "તમારું માઇક્રોફોન અને સ્પીકર્સ તપાસો",
+	"Please speak clearly": "Please speak clearly",
+	"Low/No Background Noise": "Low/No Background Noise",
+	"Background Noise Detected": "પાછળ કોઇ અવાજ મળી આવ્યો છે",
+	"Let's get started!": "ચાલો શરૂ કરીએ!",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "<span id=\"counter\"></span> સેકન્ડ પછી રેકોર્ડિંગ આપોઆપ અટકી જશે",
+	"Audio recording is too small. Please Re-record": "ઓડિયો રેકોર્ડિંગ ખૂબ નાનું છે. કૃપા કરીને ફરીથી રેકોર્ડ કરો",
+	"SKIP": "છોડી દો",
+	"START RECORDING": "રેકોર્ડિંગ શરૂ કરો",
+	"STOP RECORDING": "રેકોર્ડિંગ બંધ કરો",
+	"RE-RECORD": "ફરીથી-રેકોર્ડ કરો",
+	"NEXT": "આગળ",
+	"Report Content": "સામગ્રીની જાણ કરો",
+	"Help us understand what’s wrong with the sentence": "વાક્યમાં શું ખોટું છે તે સમજવા માટે અમને મદદ કરો",
+	"Offensive": "ગુનાઇત",
+	"Hurting sentiments of religion, community or abusive content etc.": "ધર્મ, સમુદાયની લાગણી દુભાવવી અથવા અપમાનજનક સામગ્રી વગેરે.",
+	"Prohibited Content": "પ્રતિબંધિત સામગ્રી",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "દ્વેષપૂર્ણ / ભેદભાવપૂર્ણ/ અસંસ્કારી ભાષા, નશીલા દ્રવ્યોનો પ્રચાર વગેરે.",
+	"Political Statement": "રાજકીય નિવેદન",
+	"Hateful Political views, amplifying hate-speech etc.": "દ્વેષપૂર્ણ રાજકીય મંતવ્યો, ઉશ્કેરણીજનક શબ્દો મોટેથી બોલવા વગેરે.",
+	"Misinformation": "ખોટી માહિતી",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "ઉડતી વાતો/ અફવાઓ, ઇરાદાપૂર્વક ખોટા ઉભા કરેલા તથ્યો વગેરે",
+	"Please specify the reason (Optional)": "કૃપા કરીને કારણનો ઉલ્લેખ કરો (વૈકલ્પિક)",
+	"SUBMIT": "સબમિટ કરો",
+	"Thank You": "આપનો આભાર",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "આપનો પ્રતિભાવ બોલો ઇન્ડિયાને સંબંધિત રાખવામાં મદદ કરે છે, આપે પ્રતિભાવ આપવા સમય ફાળવ્યો તે બદલ અમે આપની પ્રશંસા કરીએ છીએ.",
+	"Error!!!": "ભૂલ!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "તમારી વિનંતી પર પ્રક્રિયા કરતી વખતે અનઅપેક્ષિત ભૂલ આવી. કૃપા કરીને થોડી વાર પછી પ્રયત્ન કરો.",
+	"Close": "બંધ કરો",
+	"Thank you for contributing!": "સહભાગી થવા બદલ તમારો આભાર!",
+	"You are a champion": "તમે ચેમ્પિયન છો",
+	"WooHoo!! You took the first important step": "વૂહૂ!! તમે પ્રથમ મહત્વનું પગલું લીધું છે",
+	"recordings contributed": "રેકોર્ડિંગનું યોગદાન આપ્યું",
+	"Share it with your friends and family": "તમારા મિત્રો અને પરિવાર સાથે આ શેર કરો",
+	"Did you know?": "શું તમે જાણો છો?",
+	"Most data recorded for <span id=\"languageId\"></span>": "સૌથી વધુ ફાળો આપેલ - <span id=\"languageId\"></span>",
+	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> માટે ડેટા રેકોર્ડ કર્યો",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "તમારી ભાષાને 100 કલાકનું લક્ષ્ય પ્રાપ્ત કરવામાં મદદ કરો. અમે જાણીએ છીએ કે તમે વધુ કરી શકો છો!",
+	"Contribute More": "વધુ ફાળો આપો",
+	"Oops": "અરેરે",
+	"Page Not Found": "પેજ મળ્યું નથી",
+	"Looks like you have taken a wrong turn here": "એવું લાગે છે કે તમે અહીં ખોટો વળાંક લીધો છે",
+	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "હોમ પેજ પર જવા માટે અહીં પર <a class=\"\" href=\"/\">ક્લિક કરો</a>"
 }
