--- a/locales/kn.json
+++ b/locales/kn.json
@@ -9,7 +9,7 @@
 	"Language": "ಕನ್ನಡ",
 	"Speech Recognition Models": "Speech Recognition Models",
 	"About Us": "ನಮ್ಮನ್ನು ಕುರಿತು",
-	"Select the language for voluntary contribution": "Select the language for voluntary contribution",
+	"Select the language for voluntary contribution": "ಕೊಡುಗೆಗಾಗಿ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
 	"Show All": "ಎಲ್ಲವನ್ನೂ ತೋರಿಸಿ",
 	"Speak": "ಮಾತನಾಡಿ",
 	"Contribute Your Voice": "ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಕೊಡುಗೆ ನೀಡಿ",
@@ -53,5 +53,111 @@
 	"Select Your Preferred Language": "ನಿಮ್ಮ ಆದ್ಯತೆಯ ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
 	"Terms & Conditions": "ನಿಯಮಗಳು ಮತ್ತು ಶರತ್ತುಗಳು",
 	"Privacy Policy": "ಗೌಪ್ಯತಾ ನೀತಿ",
-	"Feedback": "ಪ್ರತಿಕ್ರಿಯೆ"
+	"Feedback": "ಪ್ರತಿಕ್ರಿಯೆ",
+	"Select a language": "Select a language",
+	"All Languages": "All Languages",
+	"Data Last Updated": "Data Last Updated",
+	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
+	"Contribute Now": "Contribute Now",
+	"hours validated": "hours validated",
+	"Progress Chart": "Progress Chart",
+	"Monthly": "Monthly",
+	"Quarterly": "Quarterly",
+	"Gender Distribution": "Gender Distribution",
+	"State Wise distribution": "State Wise distribution",
+	"Age Group Distribution": "Age Group Distribution",
+	"Subject": "Subject",
+	"Description": "Description",
+	"Please type here...": "Please type here...",
+	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"SUBMIT": "SUBMIT",
+	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback",
+	"Back to Home": "Back to Home",
+	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
+	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
+	"India is a land of many languages, our digital strategy must reflect it.": "India is a land of many languages, our digital strategy must reflect it.",
+	"90% of India's population uses region languages to conduct their day-to-day activities.": "90% of India's population uses region languages to conduct their day-to-day activities.",
+	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.",
+	"Help your own language": "Help your own language",
+	"We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.": "We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.",
+	"Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.": "Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.",
+	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform",
+	"Crowd Sourcing & your contribution": "Crowd Sourcing & your contribution",
+	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative",
+	"This is where you come in.": "This is where you come in.",
+	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "Every minute of your contribution will make a huge difference and bring us closer to our objective.",
+	"START CONTRIBUTING": "START CONTRIBUTING",
+	"ABOUT THE ORGANISATION": "ABOUT THE ORGANISATION",
+	"EkStep Foundation": "EkStep Foundation",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.",
+	"Quick Tips": "Quick Tips",
+	"Please test your <b>Microphone</b>": "Please test your <b>Microphone</b>",
+	"Please test your <b>Speakers</b>": "Please test your <b>Speakers</b>",
+	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
+	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
+	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
+	"Report": "Report",
+	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
+	"Test Mic": "Test Mic",
+	"Please speak clearly": "Please speak clearly",
+	"Low/No Background Noise": "Low/No Background Noise",
+	"Background Noise Detected": "Background Noise Detected",
+	"Test Speakers": "Test Speakers",
+	"Let's get started!": "Let's get started!",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "Recording will automatically stop after <span id=\"counter\"></span> seconds",
+	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
+	"SKIP": "SKIP",
+	"START RECORDING": "START RECORDING",
+	"STOP RECORDING": "STOP RECORDING",
+	"RE-RECORD": "RE-RECORD",
+	"NEXT": "NEXT",
+	"Report Content": "Report Content",
+	"Help us understand what’s wrong with the sentence": "Help us understand what’s wrong with the sentence",
+	"Offensive": "Offensive",
+	"Hurting sentiments of religion, community or abusive content etc.": "Hurting sentiments of religion, community or abusive content etc.",
+	"Prohibited Content": "Prohibited Content",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "Hateful / Discriminatory / Vulgar language, drugs promotion etc.",
+	"Political Statement": "Political Statement",
+	"Hateful Political views, amplifying hate-speech etc.": "Hateful Political views, amplifying hate-speech etc.",
+	"Misinformation": "Misinformation",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
+	"Please specify the reason (Optional)": "Please specify the reason (Optional)",
+	"Thank You": "Thank You",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
+	"Error!!!": "Error!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
+	"Close": "Close",
+	"Thank you for contributing!": "Thank you for contributing!",
+	"You are a champion": "You are a champion",
+	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
+	"recordings contributed": "recordings contributed",
+	"Share it with your friends and family": "Share it with your friends and family",
+	"Did you know?": "Did you know?",
+	"Most data recorded for <span id=\"languageId\"></span>": "Most data recorded for <span id=\"languageId\"></span>",
+	"Data recorded for <span id=\"languageChoiceId\"></span>": "Data recorded for <span id=\"languageChoiceId\"></span>",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
+	"Contribute More": "Contribute More",
+	"Instructions": "Instructions",
+	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
+	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
+	"Thank you for validating!": "Thank you for validating!",
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
+	"Validate More": "Validate More",
+	"Incorrect": "Incorrect",
+	"Play": "Play",
+	"Replay": "Replay",
+	"Pause": "Pause",
+	"Correct": "Correct",
+	"Skip": "Skip",
+	"Validating Instructions": "Validating Instructions",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
+	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"START": "START"
 }
