| Priyanshu + Raunak| added translation for gujarati on validation and feedback page

--- a/locales/gu.json
+++ b/locales/gu.json
@@ -14,6 +14,7 @@
 	"Test Mic": "માઇક્રોફોન ટેસ્ટ કરો",
 	"Test Speakers": "સ્પીકર્સ ટેસ્ટ કરો",
 	"Congratulations!!! You have completed this batch of sentences": "અભિનંદન!!! તમે તમારા અવાજની આખી બેચ જેટલો ફાળો આપ્યો છે!",
+	"Congratulations! You have validated a batch of recordings!": "અભિનંદન! તમે રેકોર્ડિંગની બેચને માન્યતા આપી છે!",
 	"social sharing text with rank": "મેં http://boloindia.nplt.in પર ભારત માટે ખુલ્લા ભાષા ભંડાર માટે ફાળો આપ્યો છે. તમે અને હું આપણો અવાજ આપીને કંઇક અનોખું કરી શકીએ છીએ જેનાથી મશીનોને આપણી ભાષા સમજવામાં મદદ મળે. અમારી %language ભાષા બોલો ઇન્ડિયા પર %rank રેન્ક પર છે. તમે ફાળો આપીને તમારી ભાષાને સશક્ત બનાવશો?",
 	"social sharing text without rank": "મેં http://boloindia.nplt.in પર ભારત માટે ખુલ્લા ભાષા ભંડાર માટે ફાળો આપ્યો છે. તમે અને હું આપણો અવાજ આપીને કંઇક અનોખું કરી શકીએ છીએ જેનાથી મશીનોને આપણી ભાષા સમજવામાં મદદ મળે. તમે ફાળો આપીને તમારી ભાષાને સશક્ત બનાવશો?",
 	"Language": "ગુજરાતી",
@@ -63,7 +64,7 @@
 	"Select Your Preferred Language": "તમારી પસંદગીની ભાષા પસંદ કરો",
 	"Terms & Conditions": "નિયમો અને શરતો",
 	"Privacy Policy": "પ્રાઇવસી પોલિસી",
-	"Feedback": "Feedback",
+	"Feedback": "ફીડબેક",
 	"Select a language": "એક ભાષા પસંદ કરો",
 	"All Languages": "તમામ ભાષાઓ",
 	"Data Last Updated": "છેલ્લે અપડેટ કરાયેલો ડેટા",
@@ -126,6 +127,33 @@
 	"Page Not Found": "પેજ મળ્યું નથી",
 	"Looks like you have taken a wrong turn here": "એવું લાગે છે કે તમે અહીં ખોટો વળાંક લીધો છે",
 	"<a class=\"\" href=\"/\">Click Here</a> to go back to home page": "હોમ પેજ પર જવા માટે અહીં પર <a class=\"\" href=\"/\">ક્લિક કરો</a>",
+	"Instructions": "Instructions",
+	"Thank you for your enthusiasm to validate the recordings.": "રેકોર્ડિંગને માન્યતા આપવામાં તમે દર્શાવેલા ઉત્સાહ બદલ આભાર.",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "અમારી પાસે <span id=\"spn-validation-language\"></span> ભાષામાં ડેટા નથી. કૃપા કરીને બાદમાં ફરી પ્રયાસ કરો.",
+	"Would you also like to contribute your voice?": "તમે તમારા અવાજનો ફાળો આપવા માંગો છો?",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span> માં ફાળો આપવાનું શરૂ કરો",
+	"Thank you for validating!": "માન્યતા આપવા બદલ આભાર!",
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> રેકોર્ડિંગ માન્ય કરવા બદલ આભાર",
+	"Validate More": "વધુને માન્યતા આપો",
+	"Incorrect": "ખોટુ",
+	"Play": "પ્લે કરો",
+	"Replay": "ફરી પ્લે કરો",
+	"Pause": "થોભાવો",
+	"Correct": "સાચુ",
+	"Skip": "છોડી દો",
+	"Validating Instructions": "Validating Instructions",
+	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
+	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
+	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
+	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
+	"START": "START",
+	"Subject": "વિષય",
+	"Description": "વર્ણન",
+	"Please type here...": "કૃપા કરી અહીં લખો...",
+	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
+	"Thank You for your valuable feedback": "આપના મૂલ્યવાન પ્રતિભાવ બદલ આભાર",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "આપનો પ્રતિભાવ બોલો ઇન્ડિયાને સંબંધિત રાખવામાં મદદ કરે છે, આપે પ્રતિભાવ આપવા સમય ફાળવ્યો તે બદલ અમે આપની પ્રશંસા કરીએ છીએ.",
+	"Back to Home": "પાછા હોમ પર",
 	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "ભારતીય ભાષાઓમાં અવાજ પારખવાના ક્ષેત્રમાં ભારતને આત્મનિર્ભર બનવાની જરૂર છે. આથી, અમે સંખ્યાબંધ ભારતીય અવાજોનો ઓપન ડેટા ભંડાર બનાવવા માંગીએ છીએ. બોલો ઇન્ડિયા આપને આ હેતુસર તમારા અવાજનો સ્વેચ્છાએ ફાળો આપવા માટે આમંત્રણ આપે છે.",
 	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "આ ખુલ્લા ડેટાનો ઉપયોગ તમામ ભાષા ઉત્સાહિતો અને ટેકનોલોજિસ્ટ્સ દ્વારા વિશ્વસ્તરીય અવાજ પારખવાની એપ્લિકેશનો તૈયાર કરવા માટે થઇ શકે છે.",
 	"India is a land of many languages, our digital strategy must reflect it.": "ભારત સંખ્યાબંધ ભાષાઓની ભૂમિ છે, આપણી ડિજિટલ વ્યૂહનીતિ તેને અવશ્યપણે પ્રતિબિંબિત કરવી જોઇએ.",
