|Raunak| translations for Telegu added

--- a/locales/gu.json
+++ b/locales/gu.json
@@ -3,7 +3,7 @@
 	"hrs validated in": "%language માં %hours કલાકો માન્ય કર્યા",
 	"hours": "કલાકો",
 	"minutes": "મિનિટો",
-	"seconds": "",
+	"seconds": "સેકન્ડ્સ",
 	"Recording for 5 seconds": "5 સેકન્ડ્સ માટે રેકોર્ડિંગ",
 	"Recording for 4 seconds": "4 સેકન્ડ્સ માટે રેકોર્ડિંગ",
 	"Recording for 3 seconds": "3 સેકન્ડ્સ માટે રેકોર્ડિંગ",
@@ -13,7 +13,7 @@
 	"Playing": "ચાલુ છે",
 	"Test Mic": "માઇક્રોફોન ટેસ્ટ કરો",
 	"Test Speakers": "સ્પીકર્સ ટેસ્ટ કરો",
-	"Congratulations!!! You have completed this batch of sentences": "અભિનંદન!!! તમે તમારા અવાજની આખી બેચ જેટલો ફાળો આપ્યો છે!",
+	"Congratulations!!! You have completed this batch of sentences": "અભિનંદન!!! તમે વાક્યોની આ બેચ પૂરી કરી દીધી છે!",
 	"Congratulations! You have validated a batch of recordings!": "અભિનંદન! તમે રેકોર્ડિંગની બેચને માન્યતા આપી છે!",
 	"social sharing text with rank": "મેં http://boloindia.nplt.in પર ભારત માટે ખુલ્લા ભાષા ભંડાર માટે ફાળો આપ્યો છે. તમે અને હું આપણો અવાજ આપીને કંઇક અનોખું કરી શકીએ છીએ જેનાથી મશીનોને આપણી ભાષા સમજવામાં મદદ મળે. અમારી %language ભાષા બોલો ઇન્ડિયા પર %rank રેન્ક પર છે. તમે ફાળો આપીને તમારી ભાષાને સશક્ત બનાવશો?",
 	"social sharing text without rank": "મેં http://boloindia.nplt.in પર ભારત માટે ખુલ્લા ભાષા ભંડાર માટે ફાળો આપ્યો છે. તમે અને હું આપણો અવાજ આપીને કંઇક અનોખું કરી શકીએ છીએ જેનાથી મશીનોને આપણી ભાષા સમજવામાં મદદ મળે. તમે ફાળો આપીને તમારી ભાષાને સશક્ત બનાવશો?",
@@ -64,7 +64,7 @@
 	"Select Your Preferred Language": "તમારી પસંદગીની ભાષા પસંદ કરો",
 	"Terms & Conditions": "નિયમો અને શરતો",
 	"Privacy Policy": "પ્રાઇવસી પોલિસી",
-	"Feedback": "ફીડબેક",
+	"Feedback": "પ્રતિસાદ",
 	"Select a language": "એક ભાષા પસંદ કરો",
 	"All Languages": "તમામ ભાષાઓ",
 	"Data Last Updated": "છેલ્લે અપડેટ કરાયેલો ડેટા",
