--- a/locales/kn.json
+++ b/locales/kn.json
@@ -54,57 +54,57 @@
 	"Terms & Conditions": "ನಿಯಮಗಳು ಮತ್ತು ಶರತ್ತುಗಳು",
 	"Privacy Policy": "ಗೌಪ್ಯತಾ ನೀತಿ",
 	"Feedback": "ಪ್ರತಿಕ್ರಿಯೆ",
-	"Select a language": "Select a language",
-	"All Languages": "All Languages",
-	"Data Last Updated": "Data Last Updated",
-	"We do not have any data for this language, would you like to contribute for it?": "We do not have any data for this language, would you like to contribute for it?",
-	"Contribute Now": "Contribute Now",
-	"hours validated": "hours validated",
-	"Progress Chart": "Progress Chart",
-	"Monthly": "Monthly",
-	"Quarterly": "Quarterly",
-	"Gender Distribution": "Gender Distribution",
-	"State Wise distribution": "State Wise distribution",
-	"Age Group Distribution": "Age Group Distribution",
+	"Select a language": "ಭಾಷೆಯನ್ನು ಆಯ್ಕೆಮಾಡಿ",
+	"All Languages": "ಎಲ್ಲ ಭಾಷೆಗಳು",
+	"Data Last Updated": "ಮಾಹಿತಿಯನ್ನು ಕೊನೆಯದಾಗಿ  ",
+	"We do not have any data for this language, would you like to contribute for it?": "ಈ ಭಾಷೆಗಾಗಿ ನಾವು ಯಾವುದೇ ಮಾಹಿತಿಯನ್ನು ಹೊಂದಿಲ್ಲ, ನೀವು ಇದಕ್ಕಾಗಿ ಕೊಡುಗೆ ನೀಡಬಯಸುವಿರಾ?",
+	"Contribute Now": "ಈಗ ಕೊಡುಗೆ ನೀಡಿ",
+	"hours validated": "ಮೌಲ್ಯೀಕರಿಸಿದ ಒಟ್ಟು ಸಮಯ",
+	"Progress Chart": "ಪ್ರಗತಿಯ ಚಾರ್ಟ್",
+	"Monthly": "ತಿಂಗಳಿಗಮ್ಮೆ / ಮಾಸಿಕ",
+	"Quarterly": "ಮೂರು ತಿಂಗಳಿಗೊಮ್ಮೆ / ತ್ರೈಮಾಸಿಕ",
+	"Gender Distribution": "ಲಿಂಗ ವಿತರಣೆ",
+	"State Wise distribution": "ರಾಜ್ಯವಾರು ವಿತರಣೆ",
+	"Age Group Distribution": "ವಯೋಮಾನ ವಿತರಣೆ",
 	"Subject": "Subject",
 	"Description": "Description",
 	"Please type here...": "Please type here...",
 	"Failed to submit the feedback. Please try again.": "Failed to submit the feedback. Please try again.",
-	"SUBMIT": "SUBMIT",
-	"Thank You for your valuable feedback": "Thank You for your valuable feedback",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback",
-	"Back to Home": "Back to Home",
+	"SUBMIT": "ಸಲ್ಲಿಸು",
+	"Thank You for your valuable feedback": "ನಿಮ್ಮ ಅಮೂಲ್ಯವಾದ ಪ್ರತಿಕ್ರಿಯೆಗಾಗಿ ಧನ್ಯವಾದಗಳು",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆ ಬೋಲೋ ಇಂಡಿಯಾವನ್ನು ಸಮರ್ಪಕವನ್ನಾಗಿಸಲು ನಮಗೆ ಸಹಾಯ ಮಾಡುತ್ತದೆ, ಪ್ರತಿಕ್ರಿಯೆ ನೀಡಲು ನೀವು ನಿಮ್ಮ ಸಮಯವನ್ನು ವ್ಯಯಿಸಿದುದನ್ನು ನಾವು ಪ್ರಶಂಸಿಸುತ್ತೇವೆ.",
+	"Back to Home": "ಹಿಂತಿರುಗಿ",
 	"India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.": "India needs to be Atma Nirbhar in the area of speech recognition in Indian languages. Hence, we want to create an open data repository of many Indian voices. This is an effort by MeitY, Government of India, under the National Language Translation Mission (NLTM). This effort is supported by EkStep Foundation on a pro-bono basis and leverages its open source work under <a href=\"https://sunbird.org/projects/vakyansh\">sunbird.org</a> along with various other open source frameworks.",
 	"Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.": "Bolo India invites you to volunteer and contribute your voice for this cause. All your contributions are automatically processed and made available as open data in a useful fashion back to the community. Such data then can be used by all language enthusiasts and technologists to develop world class speech recognition applications.",
-	"India is a land of many languages, our digital strategy must reflect it.": "India is a land of many languages, our digital strategy must reflect it.",
-	"90% of India's population uses region languages to conduct their day-to-day activities.": "90% of India's population uses region languages to conduct their day-to-day activities.",
-	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.",
-	"Help your own language": "Help your own language",
-	"We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.": "We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.",
-	"Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.": "Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.",
-	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform",
-	"Crowd Sourcing & your contribution": "Crowd Sourcing & your contribution",
-	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative",
-	"This is where you come in.": "This is where you come in.",
-	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off",
-	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "Every minute of your contribution will make a huge difference and bring us closer to our objective.",
-	"START CONTRIBUTING": "START CONTRIBUTING",
-	"ABOUT THE ORGANISATION": "ABOUT THE ORGANISATION",
-	"EkStep Foundation": "EkStep Foundation",
-	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.",
-	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.",
-	"Quick Tips": "Quick Tips",
-	"Please test your <b>Microphone</b>": "Please test your <b>Microphone</b>",
-	"Please test your <b>Speakers</b>": "Please test your <b>Speakers</b>",
-	"Ensure there is <b>no background noise</b>": "Ensure there is <b>no background noise</b>",
-	"Read once <b>before recording it</b>": "Read once <b>before recording it</b>",
-	"Get started by clicking on <b>Record</b> button": "Get started by clicking on <b>Record</b> button",
-	"Report": "Report",
-	"Test your Microphone and Speakers": "Test your Microphone and Speakers",
-	"Test Mic": "Test Mic",
+	"India is a land of many languages, our digital strategy must reflect it.": "ನಮ್ಮ ಬಹುಭಾಷಾ ಡಿಎನ್\u200Cಎ ಇನ್ನೂ ಡಿಜಿಟಲ್ ಮೊದಲ ತಂತ್ರದಲ್ಲಿ ಕಾಣೆಯಾಗಿದ ಅಂಶವಾಗಿದೆ",
+	"90% of India's population uses region languages to conduct their day-to-day activities.": "ಭಾರತವು ವಿಶಾಲವಾದ ಬಹುಭಾಷಾ ದೇಶವಾಗಿರುವುದರಿಂದ, ಭಾರತದ ಜನಸಂಖ್ಯೆಯ 90% ಜನರು ತಮ್ಮ ಶೈಕ್ಷಣಿಕ, ಸಾಮಾಜಿಕ ಮತ್ತು ಡಿಜಿಟಲ್ ಚಟುವಟಿಕೆಗಳನ್ನು ನಡೆಸಲು ಪ್ರಾದೇಶಿಕ ಭಾಷೆಗಳನ್ನು ಅವಲಂಬಿಸಿದ್ದಾರೆ.",
+	"As more and more people use digital platforms for financial, educational and social activities, digital platforms must work seamlessly in Indian Languages.": "ಅಂತರ್ಜಾಲ ಬಳಕೆದಾರರ ಪ್ರಮಾಣವು ಹೆಚ್ಚಾಗುತ್ತಿರುವುದರಿಂದ  ಮತ್ತು ಆರ್ಥಿಕ, ಶೈಕ್ಷಣಿಕ ಮತ್ತು ಆರ್ಥಿಕ ಚಟುವಟಿಕೆಗಳಿಗೆ ಡಿಜಿಟಲ್ ವೇದಿಕೆಗಳನ್ನು ಪ್ರವೇಶಿಸುವ ಬೇಡಿಕೆಯಿರುವುದರಿಂದ, ಮೊದಲು ಭಾರತೀಯ ಭಾಷೆಗಳನ್ನು ವಿವೇಚಿಸಲು ಪ್ರಾರಂಭಿಸುವ ಅವಶ್ಯಕತೆಯಿದೆ.",
+	"Help your own language": "ನಮ್ಮ ಪರಿಸರ ವ್ಯವಸ್ಥೆಯಲ್ಲಿ ಸ್ಥಳೀಕರಣವನ್ನು ಪರಿಚಯಿಸುವ ಮೂಲಕ ನಮ್ಮ ಭಾಷೆಗಳನ್ನು ಮರಳಿ ತರುವುದು",
+	"We need to build speech recognition technologies that are tuned for your language.  It must have high accuracy and understand the daily language and communications of people in your language.": "ಭಾರತೀಯ ಭಾಷೆಗಳಲ್ಲಿ ಪರಿಣತಿ ಹೊಂದಿರುವ, ಹೆಚ್ಚಿನ ನಿಖರತೆಯ ಪಟ್ಟಿಯನ್ನು ಪೂರೈಸುವ ಮತ್ತು ವೈವಿಧ್ಯಮಯ ಭಾರತೀಯ ಭಾಷೆಗಳ ಬಳಕೆದಾರರ ದೈನಂದಿನ ಭಾಷೆ ಮತ್ತು ಸಂವಹನ ಕಾರ್ಯಗಳಿಗೆ ಹತ್ತಿರವಿರುವ ಭಾಷಣ ಮಾನ್ಯತೆಯ ತಂತ್ರಜ್ಞಾನದ ಅವಶ್ಯಕತೆಯಿದೆ.",
+	"Having open world class speech recognition in your language will enable a digital first model in your language in various sectors such as: education, healthcare and media.": "ಭಾಷಣ ಮಾನ್ಯತೆಯು ಭಾಷಣವನ್ನು ನೈಜ-ಸಮಯದ ಪಠ್ಯವಾಗಿ ಪರಿವರ್ತಿಸುವ ತಂತ್ರಜ್ಞಾನವಾಗಿದೆ. ಭಾರತೀಯ ಭಾಷೆಗಳಿಗೆ ಇಂತಹ ಮಾದರಿಯು ಶಿಕ್ಷಣ, ಆರೋಗ್ಯ ರಕ್ಷಣೆ ಮತ್ತು ಮಾಧ್ಯಮಗಳಂತಹ ವಿವಿಧ ಕ್ಷೇತ್ರಗಳಲ್ಲಿ ಡಿಜಿಟಲ್  ಪ್ರಥಮ ಮಾದರಿಯ ಕಟ್ಟಡದ ಇಟ್ಟಿಗೆಯಾಗುವ ಸಾಮರ್ಥ್ಯವನ್ನು ಹೊಂದಿದೆ.",
+	"The tools, utilities and models  proposed to be developed in your language will rely on open source contributions through Bolo India crowd sourcing platform": "ಅಭಿವೃದ್ಧಿ ಹೊಂದಲು ಪ್ರಸ್ತಾಪಿಸಲಾದ ಪರಿಕರಗಳು, ಉಪಯುಕ್ತತೆಗಳು ಮತ್ತು ಮಾದರಿಗಳು ವಾಕ್ಯಾಂಶ್ ಜನಸಮೂಹ ಆಧಾರ ವೇದಿಕೆ ಮೂಲಕ ಮುಕ್ತ ಮೂಲ ಕೊಡುಗೆಗಳನ್ನು ಅವಲಂಬಿಸಿರುತ್ತದೆ.",
+	"Crowd Sourcing & your contribution": "ಜನಸಮೂಹ ನೆಲೆ ಮತ್ತು ನಿಮ್ಮ ಕೊಡುಗೆ:",
+	"Speech recognition relies on \"machine-learning\" technology that requires large datasets that include diverse voices and the corresponding text. Through Bolo India, we want to create a diverse open repository of Indian voices speaking Indian languages which can be used for this initiative": "ಭಾಷಣ ಮನ್ನಣೆಯು \"ಯಂತ್ರ-ಕಲಿಕೆ\" ತಂತ್ರಜ್ಞಾನವನ್ನು ಅವಲಂಬಿಸಿದೆ, ಅದಕ್ಕೆ ವೈವಿಧ್ಯಮಯ ಭಾರತೀಯ ಧ್ವನಿಗಳು ಮತ್ತು ಅನುಗುಣವಾದ ಪಠ್ಯವನ್ನು ಒಳಗೊಂಡಿರುವ ಮಾಹಿತಿಸಂಗ್ರಾಹಕಗಳ ಬೃಹತ್ ಸಂಗ್ರಹದ ಅಗತ್ಯವಿದೆ. ವಾಕ್ಯಾಂಶ್ ಮೂಲಕ, ಯ್ಯಾಕ್ ಸ್ಟೆಪ್ ಭಾರತೀಯ ಭಾಷೆಯನ್ನು ಮಾತನಾಡುವ ಭಾರತೀಯ ಧ್ವನಿಗಳ ವೈವಿಧ್ಯಮಯ ಮುಕ್ತ ಮೂಲ ಭಂಡಾರವನ್ನು ರಚಿಸಲು ಬಯಸಿದೆ, ಇದನ್ನು ಈ ಕಾರ್ಯತತ್ಪರತೆ ಮತ್ತು ಅನ್ಯ ಉದ್ದೇಶಗಳಿಗೆ ಬಳಸಬಹುದು.",
+	"This is where you come in.": "ಈ ಕ್ರಮದಲ್ಲಿ ನೀವು ಇಲ್ಲಿಗೆ ಬಂದಿರುವುದು.",
+	"We are inviting you to join us and voluntarily contribute your voice to this initiative. Recording your voice at one stretch can be overwhelming hence you can do this by visiting the website multiple times and commence from where you left us off": "ಒಂದು ತಂಡವಾಗಿ, ನಮ್ಮೊಂದಿಗೆ ಸೇರಲು ಮತ್ತು ಈ ಕಾರ್ಯತತ್ಪರತೆಗೆ 30-45 ನಿಮಿಷಗಳ ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ನೀಡಲು ನಾವು ನಿಮ್ಮನ್ನು ಆಹ್ವಾನಿಸುತ್ತಿದ್ದೇವೆ. ನಿಮ್ಮ ಧ್ವನಿಯನ್ನು ಒಂದು ವಿಸ್ತಾರದಲ್ಲಿ ದಾಖಲಿಸುವುದು ಅಗಾಧವಾಗಿರಬಹುದು ಮತ್ತು ಆದ್ದರಿಂದ, ನಮ್ಮ ವೆಬ್\u200Cಸೈಟ್\u200Cನಲ್ಲಿ ನಾವು ಸುಲಭವಾದ ಕ್ರಮಗಳನ್ನು ರಚಿಸಿದ್ದೇವೆ, ಏಕೆಂದರೆ ನೀವು ಅನೇಕ ಬಾರಿ ನಮ್ಮನ್ನು ಸಂದರ್ಶಿಸಬಹುದು ಮತ್ತು ನೀವು ತೊರೆದುಹೋದ ಸ್ಥಳದಿಂದ ಮರಳಿ ಪ್ರಾರಂಭಿಸಬಹುದು.",
+	"Every minute of your contribution will make a huge difference and bring us closer to our objective.": "ನಿಮ್ಮ ಕೊಡುಗೆಯ ಪ್ರತಿಯೊಂದು ನಿಮಿಷವೂ ದೊಡ್ಡ ವ್ಯತ್ಯಾಸವನ್ನುಂಟು ಮಾಡುತ್ತದೆ ಮತ್ತು ನಮ್ಮ ಧ್ಯೇಯಕ್ಕೆ ನಮ್ಮನ್ನು ಹತ್ತಿರ ತರುತ್ತದೆ.",
+	"START CONTRIBUTING": "ಕೊಡುಗೆ ನೀಡಲು ಪ್ರಾರಂಭಿಸಿ",
+	"ABOUT THE ORGANISATION": "ಸಂಸ್ಥೆಯ ಕುರಿತು",
+	"EkStep Foundation": "ಈಕೆಸ್ಟೆಪ್ ಸಂಸ್ಥೆ",
+	"EkStep Foundation gathers partners and creates open infrastructure, tools and frameworks to solve complex societal problems at scale. We do this by leveraging the open source digital infrastructure we have created called Sunbird and by following a way of thinking and doing called the Societal Platform Approach.": "ಈಕೆಸ್ಟೆಪ್ ಸಂಸ್ಥೆಯು ಪಾಲುದಾರರನ್ನು ಒಟ್ಟುಗೂಡಿಸುತ್ತದೆ ಮತ್ತು ಸಂಕೀರ್ಣ ಸಾಮಾಜಿಕ ಸಮಸ್ಯೆಗಳನ್ನು ಮಾನದಂಡದಲ್ಲಿ ಪರಿಹರಿಸಲು ಮುಕ್ತ ಮೂಲಸೌಕರ್ಯ, ಪರಿಕರಗಳು ಮತ್ತು ಚೌಕಟ್ಟುಗಳನ್ನು ರಚಿಸುತ್ತದೆ. ನಾವು ಸನ್\u200Cಬರ್ಡ್ ಹೆಸರಿನಲ್ಲಿ ರಚಿಸಿದ ಅನುಕೂಲಕರ ಮುಕ್ತ ಮೂಲ ಡಿಜಿಟಲ್ ಮೂಲಸೌಕರ್ಯವನ್ನು ನಿಯಂತ್ರಿಸುವ ಮೂಲಕ ಮತ್ತು ಸಾಮಾಜಿಕ ವೇದಿಕೆ ಪ್ರಸ್ತಾಪನೆಯೆಂಬ ಯೋಚನೆ ಮತ್ತು ಕಾರ್ಯವಿಧಾನವನ್ನು ಅನುಸರಿಸುವ ಮೂಲಕ ಇದನ್ನು ಸಾಧಿಸುತ್ತೇವೆ.",
+	"EkStep is a not-for-profit organization founded by Rohini and Nandan Nilekani and Shankar Maruwada.": "ಈಕೆಸ್ಟೆಪ್ ಇದು ರೋಹಿಣಿ ಮತ್ತು ನಂದನ್ ನೀಲಕೇಣಿ ಮತ್ತು ಶಂಕರ್ ಮರುವಾಡರವರು ಸ್ಥಾಪಿಸಿದ ಲಾಭಕ್ಕಾಗಿ ಅಲ್ಲದ ಅತ್ಯಾಧುನಿಕ ಸಂಸ್ಥೆಯಾಗಿದೆ.",
+	"Quick Tips": "ತ್ವರಿತ ಸಲಹೆಗಳು",
+	"Please test your <b>Microphone</b>": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಮೈಕ್ರೊಫೋನ್ ಅನ್ನು ಪರೀಕ್ಷಿಸಿ",
+	"Please test your <b>Speakers</b>": "ದಯವಿಟ್ಟು ನಿಮ್ಮ ಸ್ಪೀಕರ್\u200Cಗಳನ್ನು ಪರೀಕ್ಷಿಸಿ",
+	"Ensure there is <b>no background noise</b>": "ಹಿನ್ನೆಲೆಯಲ್ಲಿ ಸದ್ದು ಇಲ್ಲ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ",
+	"Read once <b>before recording it</b>": "ರೆಕಾರ್ಡ್ ಮಾಡುವ ಮೊದಲು ಒಮ್ಮೆ ಓದಿ",
+	"Get started by clicking on <b>Record</b> button": "ರೆಕಾರ್ಡ್ ಬಟನ್ ಒತ್ತುವ ಮೂಲಕ ಪ್ರಾರಂಭಿಸಿ",
+	"Report": "ರೆಕಾರ್ಡಿಂಗ್ ಅನ್ನು ಪ್ರಾರಂಭಿಸಿ",
+	"Test your Microphone and Speakers": "ನಿಮ್ಮ ಮೈಕ್ರೋಫೋನ್ ಸ್ಪೀಕರ್ ಗಳನ್ನು ಪರೀಕ್ಷಿಸಿ",
+	"Test Mic": "ಎಮ್ ಆಯ್ ಸಿ ಪರೀಕ್ಷಿಸಿ",
 	"Please speak clearly": "Please speak clearly",
 	"Low/No Background Noise": "Low/No Background Noise",
-	"Background Noise Detected": "Background Noise Detected",
+	"Background Noise Detected": "ಹಿನ್ನೆಲೆ ಸದ್ದು ಕಂಡುಬಂದಿದೆ",
 	"Test Speakers": "Test Speakers",
 	"Let's get started!": "Let's get started!",
 	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "Recording will automatically stop after <span id=\"counter\"></span> seconds",
