Niresh | Added translation for kannada

--- a/locales/kn.json
+++ b/locales/kn.json
@@ -105,59 +105,59 @@
 	"Please speak clearly": "Please speak clearly",
 	"Low/No Background Noise": "Low/No Background Noise",
 	"Background Noise Detected": "ಹಿನ್ನೆಲೆ ಸದ್ದು ಕಂಡುಬಂದಿದೆ",
-	"Test Speakers": "Test Speakers",
-	"Let's get started!": "Let's get started!",
-	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "Recording will automatically stop after <span id=\"counter\"></span> seconds",
-	"Audio recording is too small. Please Re-record": "Audio recording is too small. Please Re-record",
-	"SKIP": "SKIP",
-	"START RECORDING": "START RECORDING",
-	"STOP RECORDING": "STOP RECORDING",
-	"RE-RECORD": "RE-RECORD",
-	"NEXT": "NEXT",
-	"Report Content": "Report Content",
-	"Help us understand what’s wrong with the sentence": "Help us understand what’s wrong with the sentence",
-	"Offensive": "Offensive",
-	"Hurting sentiments of religion, community or abusive content etc.": "Hurting sentiments of religion, community or abusive content etc.",
-	"Prohibited Content": "Prohibited Content",
-	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "Hateful / Discriminatory / Vulgar language, drugs promotion etc.",
-	"Political Statement": "Political Statement",
-	"Hateful Political views, amplifying hate-speech etc.": "Hateful Political views, amplifying hate-speech etc.",
-	"Misinformation": "Misinformation",
-	"Hearsay / Rumors, deliberate falsified facts etc.": "Hearsay / Rumors, deliberate falsified facts etc.",
-	"Please specify the reason (Optional)": "Please specify the reason (Optional)",
-	"Thank You": "Thank You",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.",
-	"Error!!!": "Error!!!",
-	"An unexpected error occured while processing your request. Please try after some time.": "An unexpected error occured while processing your request. Please try after some time.",
-	"Close": "Close",
-	"Thank you for contributing!": "Thank you for contributing!",
-	"You are a champion": "You are a champion",
-	"WooHoo!! You took the first important step": "WooHoo!! You took the first important step",
+	"Test Speakers": "ಸ್ಪೀಕರ್ ಪರೀಕ್ಷಿಸಿ",
+	"Let's get started!": "ನಡೆಯಿರಿ ನಾವೀಗ ಆರಂಭಿಸೋಣ!",
+	"Recording will automatically stop after <span id=\"counter\"></span> seconds": "ರೆಕಾರ್ಡಿಂಗ್ <span id=\"counter\"></span> ನಂತರ ತಾನಾಗಿ ನಿಲ್ಲುತ್ತದೆ",
+	"Audio recording is too small. Please Re-record": "ಆಡಿಯೋ ರೆಕಾರ್ಡಿಂಗ್ ತುಂಬಾ ಚಿಕ್ಕದಾಗಿದೆ. ದಯವಿಟ್ಟು ಮರು-ರೆಕಾರ್ಡ್ ಮಾಡಿ",
+	"SKIP": "ತ್ಯಜಿಸಿ",
+	"START RECORDING": "ರೆಕಾರ್ಡಿಂಗ್ ಅನ್ನು ಪ್ರಾರಂಭಿಸಿ",
+	"STOP RECORDING": "ರೆಕಾರ್ಡಿಂಗ್ ಮಾಡುವುದನ್ನು ನಿಲ್ಲಿಸಿ",
+	"RE-RECORD": "ಮರು-ರೆಕಾರ್ಡಿಂಗ್ ಮಾಡಿ",
+	"NEXT": "ಮುಂದೆ",
+	"Report Content": "ವಿಷಯವನ್ನು ವರದಿ ಮಾಡಿ",
+	"Help us understand what’s wrong with the sentence": "ವಾಕ್ಯದಲ್ಲಿರುವ ತಪ್ಪನ್ನು ತಿಳಿಯುವಲ್ಲಿ ನಮಗೆ ಸಹಾಯ ಮಾಡಿ",
+	"Offensive": "ಖಂಡನಾರ್ಹ",
+	"Hurting sentiments of religion, community or abusive content etc.": "ಧರ್ಮ, ಸಮುದಾಯಗಳ ಭಾವನೆಗಳನ್ನು ನೋಯಿಸುವ ಅಥವಾ ನಿಂದನೀಯ ವಿಷಯ ಇತ್ಯಾದಿ.",
+	"Prohibited Content": "ನಿಷೇಧಿತ ವಿಷಯ",
+	"Hateful / Discriminatory / Vulgar language, drugs promotion etc.": "ದ್ವೇಷ / ಪಕ್ಷಪಾತ / ಅಶ್ಲೀಲ ಭಾಷೆ, ಅಮಲು ತರುವ ಔಷಧಿಗಳ ಪ್ರಚಾರ ಇತ್ಯಾದಿ.",
+	"Political Statement": "ರಾಜಕೀಯ ಹೇಳಿಕೆ",
+	"Hateful Political views, amplifying hate-speech etc.": "ದ್ವೇಷಪೂರಿತ ರಾಜಕೀಯ ಅಭಿಪ್ರಾಯಗಳು, ದ್ವೇಷಪೂರಿತ-ಭಾಷಣವನ್ನು ಹೆಚ್ಚಿಸುವುದು ಇತ್ಯಾದಿ.",
+	"Misinformation": "ತಪ್ಪು ಮಾಹಿತಿ",
+	"Hearsay / Rumors, deliberate falsified facts etc.": "ಹಾರುಸುದ್ದಿ / ವದಂತಿಗಳು, ಉದ್ದೇಶಪೂರ್ವಕ ಸುಳ್ಳು ಸಂಗತಿಗಳು ಇತ್ಯಾದಿ.",
+	"Please specify the reason (Optional)": "ದಯವಿಟ್ಟು ಕಾರಣವನ್ನು ನಮೂದಿಸಿ (ಐಚ್ಛಿಕ)",
+	"Thank You": "ಧನ್ಯವಾದಗಳು",
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "ನಿಮ್ಮ ಪ್ರತಿಕ್ರಿಯೆ ಬೋಲೋ ಇಂಡಿಯಾವನ್ನು ಸಮರ್ಪಕವನ್ನಾಗಿಸಲು ನಮಗೆ ಸಹಾಯ ಮಾಡುತ್ತದೆ, ಪ್ರತಿಕ್ರಿಯೆ ನೀಡಲು ನೀವು ನಿಮ್ಮ ಸಮಯವನ್ನು ವ್ಯಯಿಸಿದುದನ್ನು ನಾವು ಪ್ರಶಂಸಿಸುತ್ತೇವೆ.",
+	"Error!!!": "ದೋಷ!!!",
+	"An unexpected error occured while processing your request. Please try after some time.": "ನಿಮ್ಮ ವಿನಂತಿಯನ್ನು ಪ್ರಕ್ರಿಯೆಗೊಳಿಸುವಾಗ ಅನಿರೀಕ್ಷಿತ ದೋಷ ಸಂಭವಿಸಿದೆ. ದಯವಿಟ್ಟು ಸ್ವಲ್ಪ ಸಮಯದ ನಂತರ ಪ್ರಯತ್ನಿಸಿ.",
+	"Close": "ಮರೆಮಾಡಿ",
+	"Thank you for contributing!": "ಕೊಡುಗೆ ನೀಡಿದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು!",
+	"You are a champion": "ನೀವೊಬ್ಬ ಚ್ಯಾಂಪಿಯನ್",
+	"WooHoo!! You took the first important step": "ಓಹೋ!!  ನೀವು ಮಹತ್ವದ ಮೊದಲ ಹೆಜ್ಜೆಯನ್ನು ಎತ್ತಿದ್ದೀರಿ",
 	"recordings contributed": "recordings contributed",
-	"Share it with your friends and family": "Share it with your friends and family",
-	"Did you know?": "Did you know?",
+	"Share it with your friends and family": "ಇದನ್ನು ನಿಮ್ಮ ಸ್ನೇಹಿತರು ಮತ್ತು ಕುಟುಂಬದವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಿ",
+	"Did you know?": "ನಿಮಗೆ ಗೊತ್ತಿದೆಯೇ?",
 	"Most data recorded for <span id=\"languageId\"></span>": "Most data recorded for <span id=\"languageId\"></span>",
-	"Data recorded for <span id=\"languageChoiceId\"></span>": "Data recorded for <span id=\"languageChoiceId\"></span>",
-	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "Help your language achieve it’s goal of 100 hrs. We know you can do more!",
-	"Contribute More": "Contribute More",
-	"Instructions": "Instructions",
-	"Thank you for your enthusiasm to validate the recordings.": "Thank you for your enthusiasm to validate the recordings.",
-	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.",
-	"Would you also like to contribute your voice?": "Would you also like to contribute your voice?",
-	"Start Contributing in <span id=\"start-validation-language\"></span>": "Start Contributing in <span id=\"start-validation-language\"></span>",
-	"Thank you for validating!": "Thank you for validating!",
-	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings",
-	"Validate More": "Validate More",
-	"Incorrect": "Incorrect",
-	"Play": "Play",
-	"Replay": "Replay",
-	"Pause": "Pause",
-	"Correct": "Correct",
-	"Skip": "Skip",
-	"Validating Instructions": "Validating Instructions",
-	"Please test your <b>speakers</b>": "Please test your <b>speakers</b>",
-	"Ensure the voice is <b>clear and audible</b>": "Ensure the voice is <b>clear and audible</b>",
-	"Match the voice to the text <b>accurately</b>": "Match the voice to the text <b>accurately</b>",
-	"If you are unsure of the match, skip the particular voice sample": "If you are unsure of the match, skip the particular voice sample",
-	"START": "START"
+	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> ಳಷ್ಟು ಮಾಹಿತಿ ರೆಕಾರ್ಡ್ ಮಾಡಲಾಯಿತು",
+	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "100 ಗಂಟೆಗಳ ಗುರಿಯನ್ನು ಸಾಧಿಸಲು ನಿಮ್ಮ ಭಾಷೆಗೆ ಸಹಾಯಮಾಡಿ",
+	"Contribute More": "ಮತ್ತಷ್ಟು ಕೊಡುಗೆ ನೀಡಿ",
+	"Instructions": "ಸೂಚನೆಗಳು",
+	"Thank you for your enthusiasm to validate the recordings.": "ರೆಕಾರ್ಡಿಂಗ್ ಗಳ ಮೌಲ್ಯೀಕರಣದಲ್ಲಿಯ ನಿಮ್ಮ ಉತ್ಸಾಹಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು",
+	"We do not have any data in <span id=\"spn-validation-language\"></span> language. Please try again later.": "<span id=\"spn-validation-language\"></span> ಭಾಷೆಯಲ್ಲಿ ಯಾವುದೇ ಮಾಹಿತಿಯನ್ನು ನಾವು ಹೊಂದಿಲ್ಲ. ದಯವಿಟ್ಟು ನಂತರ ಮತ್ತೆ ಪ್ರಯತ್ನಿಸಿ",
+	"Would you also like to contribute your voice?": "ನೀವು ಕೊಡುಗೆ ನೀಡಲು ಬಯಸುವಿರಾ?",
+	"Start Contributing in <span id=\"start-validation-language\"></span>": "<span id=\"start-validation-language\"></span>ನಲ್ಲಿ ಕೊಡುಗೆ ನೀಡಲು ಪ್ರಾರಂಭಿಸಿ",
+	"Thank you for validating!": "ಮೌಲ್ಯೀಕರಿಸಿದ್ದಕ್ಕಾಗಿ ಧನ್ಯವಾದಗಳು!",
+	"Thank you for validating  <span id=\"spn-validation-count\" class=\"font-wt-900\"></span> recordings": "<span id=\"spn-validation-count\" class=\"font-wt-900\"></span> ರೆಕಾರ್ಡಿಂಗ್ ಗಳನ್ನು ಮೌಲ್ಯೀಕರಿಸಿದ್ದಕ್ಕಾಗಿ ನಿಮಗೆ ಧನ್ಯವಾದಗಳು",
+	"Validate More": "ಮತ್ತಷ್ಟು ಮೌಲ್ಯೀಕರಿಸಿ",
+	"Incorrect": "ತಪ್ಪು",
+	"Play": "ಮಾಡಿ",
+	"Replay": "ಮಾಡಿ",
+	"Pause": "ವಿರಾಮ",
+	"Correct": "ಸರಿ",
+	"Skip": "ತ್ಯಜಿಸಿ",
+	"Validating Instructions": "ಮೌಲ್ಯೀಕರಣದ ಸೂಚನೆಗಳು",
+	"Please test your <b>speakers</b>": "ನಿಮ್ಮ ಸ್ಪೀಕರ್‌ಗಳನ್ನು ದಯವಿಟ್ಟು ಪರೀಕ್ಷಿಸಿ",
+	"Ensure the voice is <b>clear and audible</b>": "ಧ್ವನಿಯು ಸ್ಪಷ್ಟ ಮತ್ತು ಸುಶ್ರಾವ್ಯವಾಗಿದೆ ಎಂದು ಖಚಿತಪಡಿಸಿಕೊಳ್ಳಿ",
+	"Match the voice to the text <b>accurately</b>": "ಧ್ವನಿಯನ್ನು ಪಠ್ಯಕ್ಕೆ ನಿಖರವಾಗಿ ಹೊಂದಿಸಿ",
+	"If you are unsure of the match, skip the particular voice sample": "ಹೊಂದಾಣಿಕೆಯ ಬಗ್ಗೆ ನಿಮಗೆ ಖಚಿತವಿಲ್ಲದಿದ್ದರೆ, ನಿರ್ದಿಷ್ಟ ಧ್ವನಿ ಮಾದರಿಯನ್ನು ಬಿಟ್ಟುಬಿಡಿ",
+	"START": "ಪ್ರಾರಂಭಿಸು"
 }
