--- a/locales/gu.json
+++ b/locales/gu.json
@@ -119,7 +119,7 @@
 	"recordings contributed": "રેકોર્ડિંગનું યોગદાન આપ્યું",
 	"Share it with your friends and family": "તમારા મિત્રો અને પરિવાર સાથે આ શેર કરો",
 	"Did you know?": "શું તમે જાણો છો?",
-	"Most data recorded for <span id=\"languageId\"></span>": "સૌથી વધુ ફાળો આપેલ - <span id=\"languageId\"></span>",
+	"Most Contributed - <span id=\"languageId\"></span>": "સૌથી વધુ ફાળો આપેલ - <span id=\"languageId\"></span>",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> માટે ડેટા રેકોર્ડ કર્યો",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "તમારી ભાષાને 100 કલાકનું લક્ષ્ય પ્રાપ્ત કરવામાં મદદ કરો. અમે જાણીએ છીએ કે તમે વધુ કરી શકો છો!",
 	"Contribute More": "વધુ ફાળો આપો",
