--- a/locales/kn.json
+++ b/locales/kn.json
@@ -136,7 +136,7 @@
 	"recordings contributed": "recordings contributed",
 	"Share it with your friends and family": "ಇದನ್ನು ನಿಮ್ಮ ಸ್ನೇಹಿತರು ಮತ್ತು ಕುಟುಂಬದವರೊಂದಿಗೆ ಹಂಚಿಕೊಳ್ಳಿ",
 	"Did you know?": "ನಿಮಗೆ ಗೊತ್ತಿದೆಯೇ?",
-	"Most data recorded for <span id=\"languageId\"></span>": "Most data recorded for <span id=\"languageId\"></span>",
+	"Most Contributed - <span id=\"languageId\"></span>": "ಹೆಚ್ಚು ಕೊಡುಗೆ ನೀಡಲಾದ - <span id=\"languageId\"></span>",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> ಳಷ್ಟು ಮಾಹಿತಿ ರೆಕಾರ್ಡ್ ಮಾಡಲಾಯಿತು",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "100 ಗಂಟೆಗಳ ಗುರಿಯನ್ನು ಸಾಧಿಸಲು ನಿಮ್ಮ ಭಾಷೆಗೆ ಸಹಾಯಮಾಡಿ",
 	"Contribute More": "ಮತ್ತಷ್ಟು ಕೊಡುಗೆ ನೀಡಿ",
