--- a/locales/ta.json
+++ b/locales/ta.json
@@ -137,7 +137,7 @@
 	"recordings contributed": "பதிவுகள் பங்களிக்கப்பட்டன",
 	"Share it with your friends and family": "இதை உங்கள் நண்பர்கள் மற்றும் குடும்பத்தினருடன் பகிரவும்",
 	"Did you know?": "உங்களுக்கு தெரியுமா?",
-	"Most data recorded for <span id=\"languageId\"></span>": "அதிக பங்களித்தது <span id=\"languageId\"></span> இல்",
+	"Most Contributed - <span id=\"languageId\"></span>": "அதிக பங்களித்தது - <span id=\"languageId\"></span> இல்",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> க்கான தரவு பதிவு செய்யப்பட்டது",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "உங்கள் மொழியில் 100 மணிநேர இலக்கை அடைய உதவுங்கள். உங்களால் இன்னும் அதிகமாக செய்ய முடியும் என்று எங்களுக்குத் தெரியும்!",
 	"Contribute More": "மேலும் பங்களிக்கவும்",
