--- a/locales/te.json
+++ b/locales/te.json
@@ -112,7 +112,6 @@
 	"recordings contributed": "రికార్డింగ్‌లు దోహదపడ్డాయి",
 	"Share it with your friends and family": "మీరు మరింత చేయగలరని మాకు తెలుసు!",
 	"Did you know?": "మీకు తెలుసా?",
-	"Most data recorded for <span id=\"languageId\"></span>": "ఎక్కువ సహకారం అందించబడింది - <span id=\"languageId\"></span>",
 	"Data recorded for <span id=\"languageChoiceId\"></span>": "<span id=\"languageChoiceId\"></span> కోసం డేటా రికార్డ్ చేయబడింది",
 	"Help your language achieve it’s goal of 100 hrs. We know you can do more!": "100 గంటల లక్ష్యాన్ని సాధించడానికి మీ భాషకు సహాయపడండి. మీరు మరింత చేయగలరని మాకు తెలుసు!",
 	"Contribute More": "మరింత సహకరించండి",
@@ -174,5 +173,6 @@
 	"State Wise distribution": "రాష్ట్రాల వారీగా పంపిణీ",
 	"Age Group Distribution": "వయో సమూహం డిస్ట్రిబ్యూషన్",
 	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback.": "మీ అభిప్రాయం బోలో ఇండియాను సందర్భోచితంగా ఉంచడానికి మాకు సహాయపడుతుంది, మీరు అభిప్రాయాన్ని తెలియజేయడానికి సమయం కేటాయిస్తే మేము మిమ్మల్ని అభినందిస్తాము.",
-	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "మీ అభిప్రాయం బోలో ఇండియాను సందర్భోచితంగా ఉంచడానికి మాకు సహాయపడుతుంది, మీరు అభిప్రాయాన్ని తెలియజేయడానికి సమయం కేటాయిస్తే మేము మిమ్మల్ని అభినందిస్తాము"
+	"Your feedback helps us keep Bolo India relevant, we appreciate you taking time to leave the feedback": "మీ అభిప్రాయం బోలో ఇండియాను సందర్భోచితంగా ఉంచడానికి మాకు సహాయపడుతుంది, మీరు అభిప్రాయాన్ని తెలియజేయడానికి సమయం కేటాయిస్తే మేము మిమ్మల్ని అభినందిస్తాము",
+	"Most Contributed - <span id=\"languageId\"></span>": "ఎక్కువ సహకారం అందించబడింది - <span id=\"languageId\"></span>"
 }
