|Raunak| social share translation fix

--- a/locales/te.json
+++ b/locales/te.json
@@ -15,7 +15,7 @@
 	"Test Speakers": "స్పీకర్ ని టెస్ట్ చేయండి",
 	"Congratulations!!! You have completed this batch of sentences": "అభినందనలు!!! మీరు ఈ బ్యాచ్ వాక్యాలను పూర్తి చేసారు",
 	"Congratulations! You have validated a batch of recordings!": "అభినందనలు! మీరు రికార్డింగ్‌ల సమూహాన్ని ధృవీకరించారు!",
-	"social sharing text with rank": "http://boloindia.nplt.in లో భారతదేశం కోసం ఓపెన్ లాంగ్వేజ్ రిపోజిటరీని నిర్మించటానికి నేను సహకరించాను. యంత్రాలు మన భాషను నేర్చుకోవడంలో సహాయపడేందుకు మనం మన గాత్ర దానం చేయడం ద్వారా మీరూ, నేనూ ఈ ప్రయత్నాన్ని మరింత త్వరగా లక్ష్యం చేరుకునేలా చేయగలము.  మా %language భాష బోలో ఇండియాలో %hours ర్యాంకులో ఉంది. భాషను సాధికారికం చేయడానికి మీ వంతు ప్రయత్నం మీరు చేస్తారా?",
+	"social sharing text with rank": "http://boloindia.nplt.in లో భారతదేశం కోసం ఓపెన్ లాంగ్వేజ్ రిపోజిటరీని నిర్మించటానికి నేను సహకరించాను. యంత్రాలు మన భాషను నేర్చుకోవడంలో సహాయపడేందుకు మనం మన గాత్ర దానం చేయడం ద్వారా మీరూ, నేనూ ఈ ప్రయత్నాన్ని మరింత త్వరగా లక్ష్యం చేరుకునేలా చేయగలము.  మా %language భాష బోలో ఇండియాలో %rank ర్యాంకులో ఉంది. భాషను సాధికారికం చేయడానికి మీ వంతు ప్రయత్నం మీరు చేస్తారా?",
 	"social sharing text without rank": "http://boloindia.nplt.in లో భారతదేశం కోసం ఓపెన్ లాంగ్వేజ్ రిపోజిటరీని నిర్మించటానికి నేను సహకరించాను. యంత్రాలు మన భాషను నేర్చుకోవడంలో సహాయపడేందుకు మనం మన గాత్ర దానం చేయడం ద్వారా మీరూ, నేనూ ఈ ప్రయత్నాన్ని మరింత త్వరగా లక్ష్యం చేరుకునేలా చేయగలము. భాషను సాధికారికం చేయడానికి మీ వంతు ప్రయత్నం మీరు చేస్తారా?",
 	"Language": "తెలుగు",
 	"Speech Recognition Models": "Speech Recognition Models",
